--- a/index.html
+++ b/index.html
@@ -352,10 +352,14 @@
         }
 
         .contact-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 3rem;
-            align-items: start;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .contact-info-section {
+            max-width: 600px;
+            width: 100%;
         }
 
         .contact-info-section h3 {
@@ -779,32 +783,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                
-                <div class="contact-form">
-                    <h3>Send me a message</h3>
-                    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" id="contactForm" onsubmit="handleFormSubmit(event)">
-                        <div class="form-group">
-                            <label for="name">Full Name</label>
-                            <input type="text" id="name" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email Address</label>
-                            <input type="email" id="email" name="_replyto" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject">Subject</label>
-                            <input type="text" id="subject" name="_subject" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea id="message" name="message" placeholder="Tell me about your project or opportunity..." required></textarea>
-                        </div>
-                        <input type="hidden" name="_next" value="#contact">
-                        <button type="submit" class="submit-btn">
-                            Send Message
-                        </button>
-                    </form>
                 </div>
             </div>
         </div>
