--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         .header-info {
             text-align: center;
         }
+
+        .header-info h1 {
             font-size: 3rem;
             margin-bottom: 0.5rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
@@ -620,19 +622,20 @@
                     </div>
                 </div>
 
-                <div class="project-card" onclick="openProject('https://github.com/Vedalau99/mydockerapp')">
+                <div class="project-card" onclick="openProject('https://github.com/Vedalau99/Kairoz')">
                     <div class="project-header">
-                        <h3>Dockerized Movie Library</h3>
-                        <p>Full-Stack Web Application</p>
+                        <h3>Kairoz</h3>
+                        <p>Multi-Cloud CI/CD Platform</p>
                     </div>
                     <div class="project-content">
                         <ul>
-                            <li>Developed a full-stack web application hosted on an EC2 instance</li>
-                            <li>Containerized using Docker and deployed services using Docker Compose</li>
-                            <li>Used YAML configuration file for service management</li>
-                            <li>Managed application availability through EC2 instance lifecycle automation</li>
+                            <li>Developed a multi-cloud project integrating AWS and GCP services</li>
+                            <li>Implemented Jenkins CI/CD pipeline on AWS EC2 instance for automated deployments</li>
+                            <li>Deployed Docker containers and Kubernetes clusters in Google Cloud Platform</li>
+                            <li>Established secure networking between AWS and GCP using service account JSON authentication</li>
+                            <li>Demonstrates expertise in multi-cloud architecture, orchestration, and cross-platform automation</li>
                         </ul>
-                        <a href="https://github.com/Vedalau99/mydockerapp" class="project-link" target="_blank">View Project</a>
+                        <a href="https://github.com/Vedalau99/Kairoz" class="project-link" target="_blank">View Project</a>
                     </div>
                 </div>
 
@@ -673,6 +676,7 @@
                         <span class="skill-tag">Route53</span>
                         <span class="skill-tag">ECR</span>
                         <span class="skill-tag">Load Balancer</span>
+                        <span class="skill-tag">Google Cloud Platform</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -681,7 +685,9 @@
                         <span class="skill-tag">CI/CD</span>
                         <span class="skill-tag">Git</span>
                         <span class="skill-tag">GitHub Actions</span>
+                        <span class="skill-tag">Jenkins</span>
                         <span class="skill-tag">Docker</span>
+                        <span class="skill-tag">Kubernetes</span>
                         <span class="skill-tag">YAML</span>
                         <span class="skill-tag">AWS CLI</span>
                     </div>
