--- a/index.html
+++ b/index.html
@@ -643,11 +643,6 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="profile-section">
-                    <div class="profile-img">
-                        <i class="fas fa-user-tie"></i>
-                    </div>
-                </div>
                 <div class="header-info">
                     <h1>Umasankar Vedala</h1>
                     <h2>AWS Cloud & DevOps Engineer | Certified Solutions Architect | Infrastructure Automation Specialist</h2>
@@ -684,7 +679,7 @@
             <h2 class="section-title">Professional Experience</h2>
             <div class="experience-timeline">
                 <div class="experience-item">
-                    <div class="experience-date">Nov 2024 - Present</div>
+                    <div class="experience-date">Nov 2023 - Present</div>
                     <div class="experience-content">
                         <div class="experience-role">Freelance DevOps Engineer</div>
                         <div class="experience-company">Hyderabad, India</div>
@@ -786,19 +781,18 @@
                     </div>
                 </div>
 
-                <div class="project-card" onclick="openProject('https://github.com/Vedalau99/Orpheus')">
+                <div class="project-card" onclick="openProject('https://partyrock.aws/u/Vedalau/qOonZSudd/Learn-Cloud-AI')">
                     <div class="project-header">
-                        <h3>Orpheus</h3>
-                        <p>AI-powered Log Anomaly Detection Tool</p>
+                        <h3>Learn Cloud AI Web App</h3>
+                        <p>Educational AI-Powered Learning Platform</p>
                     </div>
                     <div class="project-content">
                         <ul>
-                            <li>Developed an AI-enhanced cloud monitoring tool for detecting system anomalies in real-time using CloudWatch logs</li>
-                            <li>Integrates with Grafana and AWS Lambda to visualize and respond to critical log patterns</li>
-                            <li>Uses pre-trained AI logic to suggest automated remediation steps (e.g., scale-up)</li>
-                            <li>Focused on intelligent observability and operational resilience</li>
+                            <li>Designed an educational web platform integrated with AWS Party Rock AI for interactive cloud learning</li>
+                            <li>Implemented a step-by-step AI assistant to guide users through AWS learning paths and troubleshooting guides</li>
+                            <li>Demonstrated use of cloud-native services to build a serverless, user-focused learning environment</li>
                         </ul>
-                        <a href="https://github.com/Vedalau99/Orpheus" class="project-link" target="_blank">View Project</a>
+                        <a href="https://partyrock.aws/u/Vedalau/qOonZSudd/Learn-Cloud-AI" class="project-link" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -905,6 +899,11 @@
                     <h3>AWS Solutions Architect Associate</h3>
                     <div class="institution">Amazon Web Services</div>
                     <p>July 2025</p>
+                </div>
+                <div class="education-card">
+                    <h3>Docker Foundations Professional</h3>
+                    <div class="institution">Docker</div>
+                    <p>August 2025</p>
                 </div>
             </div>
         </div>
