--- a/index.html
+++ b/index.html
@@ -905,6 +905,11 @@
                     <div class="institution">Docker</div>
                     <p>August 2025</p>
                 </div>
+                <div class="education-card">
+                    <h3>Programming with Python Professional</h3>
+                    <div class="institution">Python Institute</div>
+                    <p>October 2025</p>
+                </div>
             </div>
         </div>
     </section>
